--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TP1_telecom
+application.vendor=Vincent
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TP1_telecom.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jcommon-1.0.23.zip=C:\\Users\\Vincent\\Desktop\\jcommon-1.0.23.zip
-file.reference.jfreechart-1.0.19.zip=C:\\Users\\Vincent\\Desktop\\jfreechart-1.0.19.zip
+file.reference.jcommon-1.0.23.zip-1=jcommon-1.0.23.zip
+file.reference.jfreechart-1.0.19.zip-1=jfreechart-1.0.19.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcommon-1.0.23.zip}:\
-    ${file.reference.jfreechart-1.0.19.zip}
+    ${file.reference.jcommon-1.0.23.zip-1}:\
+    ${file.reference.jfreechart-1.0.19.zip-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
